cmake_minimum_required(VERSION 2.8)

#=====================================================================================
# Version
#=====================================================================================

#=====================================================================================
# Build Options
#=====================================================================================

#=====================================================================================
# Sub directories
#=====================================================================================
set(INCPATHS
  ${CMAKE_SOURCE_DIR}/src
)

include_directories(
    ${INCPATHS}/
)

link_directories(
  ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
)

set(SOURCE_FILES ${SOURCE_FILES} main.cc)

set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O2")
set(CMAKE_C_FLAGS_DEBUG "-O0 -ggdb")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -O2")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb")

#=======================================================================================
# Build sources
#=======================================================================================

add_executable(sedec-decoder ${SOURCE_FILES})

target_link_libraries(sedec-decoder
  sedec-base
  sedec-dvb
)

#=====================================================================================
# Install
#=====================================================================================
