cmake_minimum_required(VERSION 2.8)

set(MODULE_NAME sedec-arib)
#=====================================================================================
# Version
#=====================================================================================
set(VERSION_MAJOR "2")
set(VERSION_MINOR "0")
set(VERSION_PATCH "0")
set(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
set(TARGET ${MODULE_NAME}-${VERSION})
#=====================================================================================
# Build Options
#=====================================================================================

#=====================================================================================
# Sub directories
#=====================================================================================
add_subdirectory(${CMAKE_SOURCE_DIR}/src/arib/b10)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/arib/b24)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/arib/b39)

link_directories(
  ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
)

#=======================================================================================
# Build sources
#=======================================================================================



#=====================================================================================
# Install
#=====================================================================================
