cmake_minimum_required(VERSION 2.8)

set(MODULE_NAME sedec-base)
#=====================================================================================
# Version
#=====================================================================================
set(VERSION_MAJOR "2")
set(VERSION_MINOR "0")
set(VERSION_PATCH "0")
set(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")

#=====================================================================================
# Build Options
#=====================================================================================

#=====================================================================================
# Sub directories
#=====================================================================================
set(INCPATHS
    ${CMAKE_SOURCE_DIR}
)

include_directories(
    ${INCPATHS}
)

set(SOURCE_FILES ${SOURCE_FILES}
  bit_readwriter.cc
  descriptor.cc
  section.cc
)

link_directories(

)

#=======================================================================================
# Build sources
#=======================================================================================
add_library(${MODULE_NAME}-${VERSION} SHARED ${SOURCE_FILES})

target_link_libraries(${MODULE_NAME}

)
#=====================================================================================
# Install
#=====================================================================================